<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_step_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@android:color/black"
            app:default_artwork="@drawable/video_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resize_mode="fit"
            app:shutter_background_color="@android:color/transparent"
            app:use_artwork="false">

        </com.google.android.exoplayer2.ui.PlayerView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:contentPadding="@dimen/card_content_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_step_video">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_step_short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/tv_step_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="@+id/tv_step_short_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_step_short_description"
                    tools:text="TextView" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_previous_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_text_previous"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            app:layout_constraintStart_toStartOf="@+id/card_view_description"
            app:layout_constraintTop_toBottomOf="@+id/card_view_description" />

        <Button
            android:id="@+id/bt_next_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_text_next"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            app:layout_constraintEnd_toEndOf="@+id/card_view_description"
            app:layout_constraintTop_toBottomOf="@+id/card_view_description" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>